--- a/css/kartu.css
+++ b/css/kartu.css
@@ -7,7 +7,7 @@
 }
 
 #kartu {
-    background-image: url('image/demo.png');
+    background-image: url('../image/demo.png');
     width: 595px;
     height: 835px;
     border: 1px solid;
@@ -32,12 +32,4 @@
   .block:hover {
     background-color: #ddd;
     color: blue;
-  }
-
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    flex: 1 0 100%;
   }
